--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <div id="title">Bracket Buster: a comp sci project</div>
   <div> Contributers </div>
   <ul>
-    <li> Hastings Greer 720310905 </li>
+    <li> Hastings Greer tgreer</li>
     <li> KHam </li>
-    <li> Add names here </li>
+    <li> pmdevia </li>
+    <li> Destiny </li>
 
   </ul>
   <a href="mockup/" > mockup </a>
