--- a/mockup/index.html
+++ b/mockup/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <div id="title">Bracket Buster</div>
+  <form id="login">
+    Username: <input type=text name=username> <br>
+    Password: <input type=password name=password>
+  </form>
   <div id="tournament_list">
     <div id="tournamet_list_title">Ongoing tournaments:</div>
     <ol>
