--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>Bracket Buster!</title>
 
 
+<link type="text/css" href="index.css" rel="stylesheet">
 </head>
 <body>
   <div id="title">Bracket Buster: a comp sci project</div>
@@ -14,6 +15,24 @@
     <li> Destiny </li>
 
   </ul>
+
+  Plan:
+  <ul>
+    <li>
+      index.html: <br>
+      main page.
+      list links to ongoing tournaments
+      if logged in:
+        list links to tournaments that you manage
+        create tournament link
+      if not logged in:
+        login and create user panels
+    </li><li>
+      create_tournament.html
+    </li>
+  </ul>
+
+
   <a href="mockup/" > mockup </a>
 
 </body>
