--- a/mockup/index.html
+++ b/mockup/index.html
@@ -2,16 +2,18 @@
 <head>
 <title>Bracket Buster!</title>
 
+<link type="text/css" href="index.css" rel="stylesheet">
 
 </head>
 <body>
   <div id="title">Bracket Buster</div>
   <form id="login">
+    Organizer Login:<br>
     Username: <input type=text name=username> <br>
     Password: <input type=password name=password>
   </form>
   <div id="tournament_list">
-    <div id="tournamet_list_title">Ongoing tournaments:</div>
+    <div id="tournament_list_title">Ongoing tournaments:</div>
     <ol>
       <li> <a href="tourney1.html"> UNC Club Volleyball 2016</a></li>
       <li> <a href="tourney2.html"> UNC Club Frisbee 2016</a></li>
