--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <ul>
     <li>
       index.html: <br>
-      main page.
-      list links to ongoing tournaments
-      if logged in:
-        list links to tournaments that you manage
-        create tournament link
-      if not logged in:
+      main page. <br>
+      list links to ongoing tournaments<br>
+      if logged in:<br>
+        list links to tournaments that you manage<br>
+        create tournament link<br>
+      if not logged in:<br>
         login and create user panels
     </li><li>
       create_tournament.html
