--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
 <head>
 <title>Bracket Buster!</title>
-
-
 <link type="text/css" href="index.css" rel="stylesheet">
 </head>
 <body>
@@ -16,19 +14,25 @@
 
   </ul>
 
-  Plan:
+  Website Structure:
   <ul>
     <li>
       index.html: <br>
       main page. <br>
       list links to ongoing tournaments<br>
       if logged in:<br>
-        list links to tournaments that you manage<br>
-        create tournament link<br>
+      --list links to tournaments that you manage<br>
+      --create tournament link<br>
       if not logged in:<br>
-        login and create user panels
+      --login and create user panels
     </li><li>
-      create_tournament.html
+      view_tournament.html
+    </li><li>
+      create_tournament.html:<br>
+      Select N number of competitors (must be a power of two)<br>
+      N textboxes for team names (each initialized to "bye")<br>
+      Create tournament button
+
     </li>
   </ul>
 
