ut website tructure

--- a/index.html
+++ b/index.html
@@ -26,12 +26,16 @@
       if not logged in:<br>
       --login and create user panels
     </li><li>
-      view_tournament.html
+      view_tournament.html<br>
+      just shows the tournament so far.<br>
+      this page is dynamically generated for each tournament that has been created<br>
+      if logged in:<br>
+      --next to each undecided game there are two buttons so you can tell the website who won that game
     </li><li>
       create_tournament.html:<br>
       Select N number of competitors (must be a power of two)<br>
       N textboxes for team names (each initialized to "bye")<br>
-      Create tournament button
+      Create tournament button: this goes to the view_tournament.html for the tournament you just made
 
     </li>
   </ul>
