--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <ul>
     <li> Hastings Greer tgreer</li>
     <li> KHam </li>
-    <li> pmdevia </li>
+    <li> Pamela Devia pmdevia </li>
     <li> Destiny </li>
 
   </ul>
