link website structure entries to relevant pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   Website Structure:
   <ul>
     <li>
-      index.html: <br>
+      <a href=mockup/index.html> index.html </a>: <br>
       main page. <br>
       list links to ongoing tournaments<br>
       if logged in:<br>
@@ -32,7 +32,7 @@
       if logged in:<br>
       --next to each undecided game there are two buttons so you can tell the website who won that game
     </li><li>
-      create_tournament.html:<br>
+      <a href=mockup/create_tournament.html> create_tournament.html</a>:<br>
       Select N number of competitors (must be a power of two)<br>
       N textboxes for team names (each initialized to "bye")<br>
       Create tournament button: this goes to the view_tournament.html for the tournament you just made
