add tournament button

--- a/mockup/index.html
+++ b/mockup/index.html
@@ -19,4 +19,7 @@
       <li> <a href="tourney2.html"> UNC Club Frisbee 2016</a></li>
     </ol>
   </div>
+  <div id="create-tournament">
+    <a href=create_tournament.html> Create tournament </a>
+  </div>
 </body>
