Add some bad css and tourney1.html

--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <html>
 <head>
-<title>Bracket Buster!</title>
+    <title>Bracket Buster!</title>
 
 
 </head>
 <body>
-  <div id="title">Bracket Buster: a comp sci project</div>
-  <div> Contributers </div>
-  <ul>
+<div id="title">Bracket Buster: a comp sci project</div>
+<div><p>Bracket Buster is a web application to track team records for small sports leagues.</p>
+    <p> Bracket Buster allows league organizers to track wins and losses for their teams. It also allows players and
+        fans to see who is leading the league. </p></div>
+<div> Contributors</div>
+<ul>
     <li> Hastings Greer tgreer</li>
-    <li> KHam </li>
-    <li> pmdevia </li>
-    <li> Destiny </li>
+    <li> Katherine Ham kham</li>
+    <li> Pamela Devia pmdevia</li>
+    <li> Destiny Harrell destiny</li>
 
-  </ul>
-  <a href="mockup/" > mockup </a>
+</ul>
+<a href="mockup/"> mockup </a>
 
 </body>
+</html>
