--- a/mockup/index.html
+++ b/mockup/index.html
@@ -1,15 +1,18 @@
 <html>
 <head>
 <title>Bracket Buster!</title>
-
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 <body>
-  <div id="title">Bracket Buster</div>
+  <div id="login-section">
+  <div id="title">Bracket Buster</div> <br>
   <form id="login">
-    Username: <input type=text name=username> <br>
-    Password: <input type=password name=password>
+    Username: <input type=text name=username> <br> <br>
+    Password: <input type=password name=password><br> <br>
+    <button type="submit">LOGIN</button>
   </form>
+  </div>
   <div id="tournament_list">
     <div id="tournamet_list_title">Ongoing tournaments:</div>
     <ol>
@@ -18,3 +21,4 @@
     </ol>
   </div>
 </body>
+</html>
