--- a/mockup/index.html
+++ b/mockup/index.html
@@ -19,6 +19,12 @@
       <li> <a href="tourney2.html"> UNC Club Frisbee 2016</a></li>
     </ol>
   </div>
+  <div id="managed_tournament_list">
+    <div id="tournament_list_title">Tournaments you manage:</div>
+    <ol>
+      <li> <a href="tourney1.html"> UNC Club Volleyball 2016</a></li>
+    </ol>
+  </div>
   <div id="create-tournament">
     <a href=create_tournament.html> Create tournament </a>
   </div>
