--- a/mockup/create_tournament.html
+++ b/mockup/create_tournament.html
@@ -20,6 +20,14 @@
       <option value=4>128</option>
     </select><br>
     Team Name: <input type=text name=team1> <br>
+    Team Name: <input type=text name=team2> <br>
+    Team Name: <input type=text name=team3> <br>
+    Team Name: <input type=text name=team4> <br>
+    Team Name: <input type=text name=team5> <br>
+    Team Name: <input type=text name=team6> <br>
+    Team Name: <input type=text name=team7> <br>
+    Team Name: <input type=text name=team8> <br>
+    <input type="submit" value="Submit">
 
   </form>
 </body>
