--- a/mockup/create_tournament.html
+++ b/mockup/create_tournament.html
@@ -19,14 +19,14 @@
       <option value=4>64</option>
       <option value=4>128</option>
     </select><br>
-    Team Name: <input type=text name=team1> <br>
-    Team Name: <input type=text name=team2> <br>
-    Team Name: <input type=text name=team3> <br>
-    Team Name: <input type=text name=team4> <br>
-    Team Name: <input type=text name=team5> <br>
-    Team Name: <input type=text name=team6> <br>
-    Team Name: <input type=text name=team7> <br>
-    Team Name: <input type=text name=team8> <br>
+    Team Name: <input type=text name=team1 value=bye> <br>
+    Team Name: <input type=text name=team2 value=bye> <br>
+    Team Name: <input type=text name=team3 value=bye> <br>
+    Team Name: <input type=text name=team4 value=bye> <br>
+    Team Name: <input type=text name=team5 value=bye> <br>
+    Team Name: <input type=text name=team6 value=bye> <br>
+    Team Name: <input type=text name=team7 value=bye> <br>
+    Team Name: <input type=text name=team8 value=bye> <br>
     <input type="submit" value="Submit">
 
   </form>
