--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <div> Contributers </div>
   <ul>
     <li> Hastings Greer tgreer</li>
-    <li> KHam </li>
+    <li> Katherine Ham kham13 </li>
     <li> Pamela Devia pmdevia </li>
     <li> Destiny </li>
 
