--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </li><li>
       view_tournament.html<br>
       just shows the tournament so far.<br>
-      this page is dynamically generated for each tournament that has been created<br>
+      This page is dynamically generated for each tournament that has been created<br>
       if logged in:<br>
       --next to each undecided game there are two buttons so you can tell the website who won that game
     </li><li>
