Converting to styles.css

--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <html>
 <head>
-<<<<<<< HEAD
     <title>Bracket Buster!</title>
-<link type="text/css" href="mockup/styles.css" rel="stylesheet">
->>>>>>> 9889c82322a705b5a89929199e5dbfacfd5e2b9f
+    <link type="text/css" href="mockup/styles.css" rel="stylesheet">
+
 </head>
 <body>
-<div id="title">Bracket Buster: a comp sci project</div>
+<div id="home_screen">
+<div id="title">Bracket Buster: A Comp Sci Project</div>
 <div><p>Bracket Buster is a web application to track team records for small sports leagues.</p>
     <p> Bracket Buster allows league organizers to track wins and losses for their teams. It also allows players and
         fans to see who is leading the league. </p></div>
 <div> Contributors</div>
 <ul>
     <li> Hastings Greer tgreer</li>
-    <li> Katherine Ham kham13 </li>
-    <li> Pamela Devia pmdevia </li>
-    <li> Destiny </li>
+    <li> Katherine Ham kham13</li>
+    <li> Pamela Devia pmdevia</li>
+    <li> Destiny Harrell destiny</li>
 
-  </ul>
-
-  Website Structure:
-  <ul>
+</ul>
+Website Structure:
+<ul>
     <li>
-      <a href=mockup/index.html> index.html </a>: <br>
-      main page. <br>
-      list links to ongoing tournaments<br>
-      if logged in:<br>
-      --list links to tournaments that you manage<br>
-      --create tournament link<br>
-      if not logged in:<br>
-      --login and create user panels
-    </li><li>
-      view_tournament.html<br>
-      just shows the tournament so far.<br>
-      this page is dynamically generated for each tournament that has been created<br>
-      if logged in:<br>
-      --next to each undecided game there are two buttons so you can tell the website who won that game
-    </li><li>
-      <a href=mockup/create_tournament.html> create_tournament.html</a>:<br>
-      Select N number of competitors (must be a power of two)<br>
-      N textboxes for team names (each initialized to "bye")<br>
-      Create tournament button: this goes to the view_tournament.html for the tournament you just made
+        <a href=mockup/index.html> index.html </a>: <br>
+        main page. <br>
+        list links to ongoing tournaments<br>
+        if logged in:<br>
+        --list links to tournaments that you manage<br>
+        --create tournament link<br>
+        if not logged in:<br>
+        --login and create user panels
+    </li>
+    <li>
+        view_tournament.html<br>
+        just shows the tournament so far.<br>
+        this page is dynamically generated for each tournament that has been created<br>
+        if logged in:<br>
+        --next to each undecided game there are two buttons so you can tell the website who won that game
+    </li>
+    <li>
+        <a href=mockup/create_tournament.html> create_tournament.html</a>:<br>
+        Select N number of competitors (must be a power of two)<br>
+        N textboxes for team names (each initialized to "bye")<br>
+        Create tournament button: this goes to the view_tournament.html for the tournament you just made
 
     </li>
-  </ul>
+</ul>
 
-
-  <a href="mockup/" > mockup </a>
-
+<a href="mockup/"> mockup </a>
+</div>
 </body>
 </html>
