--- a/mockup/index.html
+++ b/mockup/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Bracket Buster!</title>
-<link type="text/css" href="index.css" rel="stylesheet">
+<link type="text/css" href="styles.css" rel="stylesheet">
 </head>
 <body>
   <div id="login-section">
