--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@ Website Structure:
         <a href=mockup/index.html> index.html </a>: <br>
         main page. <br>
         list links to ongoing tournaments<br>
-        if logged in:<br>
-        --list links to tournaments that you manage<br>
-        --create tournament link<br>
-        if not logged in:<br>
-        --login and create user panels
+        If logged in:<br>
+        <ul>
+            <li>List links to tournaments that you manage</li>
+            <li>Create tournament link</li>
+        </ul>
+        If not logged in:<br>
+        <ul>
+            <li>Login and create user panels</li>
+        </ul>
 
     </li>
     <li>
