--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 Website Structure:
 <ul>
     <li>
-        <a href=mockup/index.html> index.html </a>: <br>
-        main page. <br>
-        list links to ongoing tournaments<br>
-        If logged in:<br>
+        <a href=mockup/index.html> Main Page Mockup </a>lists links to ongoing tournaments.<br>
+        <ul>
+            <li>If logged in:</li>
         <ul>
             <li>List links to tournaments that you manage</li>
             <li>Create tournament link</li>
         </ul>
-        If not logged in:<br>
+            <li>If not logged in:</li>
         <ul>
             <li>Login and create user panels</li>
+        </ul>
         </ul>
 
     </li>
@@ -39,8 +39,10 @@ Website Structure:
         view_tournament.html<br>
         just shows the tournament so far.<br>
         this page is dynamically generated for each tournament that has been created<br>
-        if logged in:<br>
-        --next to each undecided game there are two buttons so you can tell the website who won that game
+        If logged in:<br>
+        <ul>
+        <li>Next to each undecided game there are two buttons so you can tell the website who won that game</li>
+        </ul>
     </li>
     <li>
         <a href=mockup/create_tournament.html> create_tournament.html</a>:<br>
