--- a/index.html
+++ b/index.html
@@ -36,20 +36,20 @@ Website Structure:
 
     </li>
     <li>
-        view_tournament.html<br>
-        just shows the tournament so far.<br>
-        this page is dynamically generated for each tournament that has been created<br>
-        If logged in:<br>
+        view_tournament.html shows the tournament so far and is dynamically generated for each tournament that has been created.
         <ul>
-        <li>Next to each undecided game there are two buttons so you can tell the website who won that game</li>
+        <li>If logged in:</li>
+            <ul>
+            <li>Next to each undecided game there are two buttons so you can tell the website who won that game</li>
+            </ul>
         </ul>
     </li>
     <li>
-        <a href=mockup/create_tournament.html> create_tournament.html</a>:<br>
-        Select N number of competitors (must be a power of two)<br>
-        N textboxes for team names (each initialized to "bye")<br>
-        Create tournament button: this goes to the view_tournament.html for the tournament you just made
-
+        <a href=mockup/create_tournament.html> Create Tournament Page</a> has the ability to select N number of competitors (must be a power of two).
+        <ul>
+            <li>There are N textboxes designated for team names (each initialized to "bye")</li>
+            <li>Create tournament button goes to the view_tournament.html for the tournament you just made</li>
+        </ul>
     </li>
 </ul>
 
