--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
 <div id="home_screen">
 <div id="title">Bracket Buster: A Comp Sci Project</div>
-<div><p>Bracket Buster is a web application to track team records for small sports leagues.</p>
-    <p> Bracket Buster allows league organizers to track wins and losses for their teams. It also allows players and
+<div><p>Bracket Buster is a web application to track team records for small sports leagues. It allows league organizers to 
+    track wins/losses for their teams and allows players and
         fans to see who is leading the league. </p></div>
 <div> Contributors</div>
 <ul>
