clarify that we are for single elimination tournaments

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <div id="home_screen">
 <div id="title">Bracket Buster: A Comp Sci Project</div>
-<div><p>Bracket Buster is a web application to track team records for small sports leagues. It allows league organizers to 
+<div><p>Bracket Buster is a web application to manage small sports tournaments. It allows league organizers to
     track wins/losses for their teams and allows players and
         fans to see who is leading the league. </p></div>
 <div> Contributors</div>
