clarify that we are for single elimination tournaments

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="title">Bracket Buster: A Comp Sci Project</div>
 <div><p>Bracket Buster is a web application to manage small sports tournaments. It allows league organizers to
     track wins/losses for their teams and allows players and
-        fans to see who is leading the league. </p></div>
+        fans to see who is up next to play and who is leading the league. </p></div>
 <div> Contributors</div>
 <ul>
     <li> Hastings Greer tgreer</li>
