--- a/mockup/index.html
+++ b/mockup/index.html
@@ -1,21 +1,23 @@
 <html>
-<head>
-<title>Bracket Buster!</title>
-<link type="text/css" href="styles.css" rel="stylesheet">
-</head>
-<body>
-  <div id="login-section">
-  <div id="title">Bracket Buster</div> <br>
-  <form id="login">
+  <head>
+    <title>Bracket Buster!</title>
+    <link type="text/css" href="styles.css" rel="stylesheet">
+  </head>
+  
+  <body>
+    <div id="back_photo"></div>
+    <div id="login-section">
+      <div id="title">Bracket Buster</div> <br>
+        <form id="login">
 
-      Organizer Login:<br>
-    Username: <input type=text name=username> <br> <br>
-    Password: <input type=password name=password><br> <br>
-    <button type="submit">LOGIN</button>
+          Organizer Login:<br>
+          Username: <input type=text name=username> <br> <br>
+          Password: <input type=password name=password><br> <br>
+          <button type="submit">LOGIN</button>
 
-  </form>
-  </div>
-  <div id="tournament_list">
+        </form>
+     </div>
+    <div id="tournament_list">
     <div id="tournament_list_title">Ongoing tournaments:</div>
     <ol>
       <li> <a href="tourney1.html"> UNC Club Volleyball 2016</a></li>
