--- a/mockup/index.html
+++ b/mockup/index.html
@@ -7,7 +7,7 @@
   <body>
     <div id="back_photo"></div>
     <div id="login-section">
-      <div id="title">Bracket Buster</div> <br>
+      <div id="title">Bracket Buster test</div> <br>
         <form id="login">
 
           Organizer Login:<br>
