--- a/mockup/index.html
+++ b/mockup/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Bracket Buster!</title>
-    <link type="text/css" href="login.css" rel="stylesheet">
+    <link type="text/css" href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Maiden+Orange" rel="stylesheet">
   </head>
   
