--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
     <title>Bracket Buster!</title>
     <link type="text/css" href="mockup/styles.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Maiden+Orange" rel="stylesheet">
 
 </head>
 <body>
