--- a/mockup/tournament_view.html
+++ b/mockup/tournament_view.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Tournament View</title>
+	<title>Tournament Select</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="leagueview.css">
 	<link rel="stylesheet" type="text/css" href="css/tournament_view.css">
@@ -9,18 +9,10 @@
 	<script src="js/tournament_view_js_loader.js"></script>
 </head>
 <body>
-<div id=tournament_list></div>
-<h4>Pick a tournament</h4>
+<div id=login_header>FAN MODE. LOGIN TO SEE TOURNAMENTS YOU MANAGE. <span class="right"><a href="index.html">LOGIN</a></span></div>
+<h1>Pick an ongoing tournament</h1>
 <div id="team_container">
-	<div class="tournament_card">
-		<p>Tournament Name</p>
-	</div>
-	<div class="tournament_card">
-		<p>Tournament Name</p>
-	</div>
-	<div class="tournament_card">
-		<p>Tournament Name</p>
-	</div>
+<!-- Tournament info appears here via database call -->
 </div>
 
 </body>
