--- a/mockup/index.html
+++ b/mockup/index.html
@@ -12,8 +12,9 @@
             <form id="login">
 
                 Organizer Login:<br>
-                Username: <input type=text name=username> <br> <br>
-                Password: <input type=password name=password><br> <br>
+                Username: <input type=text name=username> <span id="username_availabilty"> </span><br> <br> 
+                <!-- //Going to do some ongoing username and password check -->
+                Password: <input type=password name=password><span id="password_check"> </span><br> <br> 
             <button type="submit">LOGIN</button>
             </form>
             
