--- a/mockup/create_tournament.html
+++ b/mockup/create_tournament.html
@@ -8,6 +8,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"> </script>
 <script src="js/tournament.js"></script>
 <script src="js/create_tournament.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Maiden+Orange" rel="stylesheet">
 
 </head>
 <body>
