--- a/mockup/register.html
+++ b/mockup/register.html
@@ -12,24 +12,21 @@
   <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"> </script>
+	<script src="js/User.js"></script>
+	<script src="js/registration.js"></script>
 </head>
 <body>
 <div id="registerphp">
 	<h2 class="title">Create an account</h2>
-	<form method="post" action="register.php" id="registerForm">
+	<form>
 		<div id="register_form">
-			<label for="first_name">First Name:</label>
-			<input type="text" name="first_name" id="first_name"><br>
-			<label for="last_name">Last Name:</label>
-			<input type="text" name="last_name" id="last_name"><br>
 			<label for="username">Email:</label>
-			<input type="text" name="username" id="username"><br>
-			<label for="username">Email:</label>
-			<input type="text" name="username" id="username"><br>
+			<input type="text" name="username" id="username" required><span id="username_availabilty"><!-Leave this here. JS gives info about whether account exists. BUT style the text. --></span><br>
 			<label for="password">Password:</label>
-			<input type="password" name="password" id="password"><br>
+			<input type="password" name="password" id="password" required><span id="password_availabilty"></span>Password should be at least 8 characters. NO SPACES!<br>
 			<label for="password">Verify Password:</label>
-			<input type="password" name="password" id="password"><br>
+			<input type="password" name="verify" id="verify" required><br><span id="verify_match"></span>
 			<input type="submit" name="register" id="register" value="Sign up"><br>
 		</div>
 		</form>
