Add functionality to buttons'

--- a/mockup/your_tournaments.html
+++ b/mockup/your_tournaments.html
@@ -14,8 +14,8 @@
 <!-- Tournament info appears here via database call -->
 </div>
 <div>
-<button>Add a tournament</button>
-<button>See All Tournaments</button>
+<button><a href="create_tournament.html">Add a tournament</a></button>
+<button><a href="tournament_view.html">See All Tournaments</a></button>
 </div>
 
 </body>
