--- a/mockup/index.html
+++ b/mockup/index.html
@@ -37,10 +37,10 @@
     
     <script>
     $(document).ready(function (){
-    $(document).on('click', '#rules', function(event){
+    $(document).on('click', 'a', function(event){
         event.preventDefault();
 
-        $('html, body').animate({
+        $('html, rules').animate({
             scrollTop: $( $.attr(this, 'href') ).offset().top
         }, 800);
     });
