--- a/mockup/index.html
+++ b/mockup/index.html
@@ -40,7 +40,7 @@
     $(document).on('click', 'a', function(event){
         event.preventDefault();
 
-        $('html, rules').animate({
+        $('html, body').animate({
             scrollTop: $( $.attr(this, 'href') ).offset().top
         }, 800);
     });
