--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -3,6 +3,7 @@
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Maiden+Orange" rel="stylesheet">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+<script src="js/tournament_render.js"></script>
 <h1 id="title">Your Tournament</h1>
 <main id="tournament">
 	<ul class="round round-1">
@@ -107,7 +108,7 @@
     </tr>
 </table>
 
-<script>
+<!-- <script>
 var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=16';
     $(document).ready(function)
     {
@@ -138,3 +139,4 @@ var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=
     });
 })
 </script>
+ -->
