--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" type="text/css" href="tourneyView.css">
 <link rel="stylesheet" type="text/css" href="styles.css">
 <link href="https://fonts.googleapis.com/css?family=Maiden+Orange" rel="stylesheet">
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"> </script>
 <script src="js/tournament_render.js"></script>
 <h1 id="title">Your Tournament</h1>
 <main id="tournament">
