--- a/mockup/tournament_view.html
+++ b/mockup/tournament_view.html
@@ -10,7 +10,7 @@
 	<script src="js/tournament_view_js_loader.js"></script>
 </head>
 <body>
- <div id="back_photo">
+ <div id="back_pic">
 <h1 id="title">Pick an ongoing tournament</h1>
 <div id="team_container">
 <!-- Tournament info appears here via database call -->
