--- a/mockup/your_tournaments.html
+++ b/mockup/your_tournaments.html
@@ -11,12 +11,14 @@
 </head>
 <body>
 <h1>Your Tournaments</h1>
-<div id="team_container">
-<!-- Tournament info appears here via database call -->
-</div>
-<div>
-<button><a href="create_tournament.html">Add a tournament</a></button>
-<button><a href="tournament_view.html">See All Tournaments</a></button>
+<div id="backgroundPhoto">
+	<div id="team_container">
+	<!-- Tournament info appears here via database call -->
+	</div>
+	<div>
+	<button><a href="create_tournament.html">Add a tournament</a></button>
+	<button><a href="tournament_view.html">See All Tournaments</a></button>
+	</div>
 </div>
 
 </body>
