--- a/mockup/your_tournaments.html
+++ b/mockup/your_tournaments.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="leagueview.css">
 	<link rel="stylesheet" type="text/css" href="css/tournament_view.css">
+	<link rel="stylesheet" type="text/css" href="css/your_tournaments.css">
 	<link href="https://fonts.googleapis.com/css?family=Maiden+Orange" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">	</script>
 	<script src="js/Tournament_View.js"></script>
