--- a/mockup/tournament_view.html
+++ b/mockup/tournament_view.html
@@ -11,7 +11,7 @@
 </head>
 <body>
  <div id="back_pic">
-<h1 id="title">Pick an ongoing tournament</h1>
+<h1 id="create_title">Pick an ongoing tournament</h1>
 <div id="team_container">
 <!-- Tournament info appears here via database call -->
 </div>
