--- a/mockup/tournament_view.html
+++ b/mockup/tournament_view.html
@@ -16,6 +16,10 @@
 <div id="team_container">
 <!-- Tournament info appears here via database call -->
 </div>
+
+<div id="pool_container">
+</div>
+	 
 </div>
 </body>
 
