--- a/mockup/your_tournaments.html
+++ b/mockup/your_tournaments.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <h1>Your Tournaments</h1>
-<div id="backgroundPhoto">
+<div id="backGPhoto">
 	<div id="team_container">
 	<!-- Tournament info appears here via database call -->
 	</div>
