--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -108,6 +108,7 @@
     </tr>
 </table>
 
+<div id="pool_container"></div>
 <!-- <script>
 var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=16';
     $(document).ready(function)
