--- a/mockup/your_tournaments.html
+++ b/mockup/your_tournaments.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Tournaments You Manage</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<link rel="stylesheet" type="text/css" href="css/your_tournaments.css">
+	<link rel="stylesheet" type="text/css" href="your_tournaments.css">
 	<link rel="stylesheet" type="text/css" href="leagueview.css">
 	<link rel="stylesheet" type="text/css" href="css/tournament_view.css">
 	<link href="https://fonts.googleapis.com/css?family=Maiden+Orange" rel="stylesheet">
