--- a/mockup/your_tournaments.html
+++ b/mockup/your_tournaments.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="your_tournaments.css">
 	<link rel="stylesheet" type="text/css" href="leagueview.css">
+	<link rel="stylesheet" type="text/css" href="create_tournament.css">
 	<link rel="stylesheet" type="text/css" href="css/tournament_view.css">
 	<link href="https://fonts.googleapis.com/css?family=Maiden+Orange" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js">	</script>
@@ -11,7 +12,7 @@
 	<script src="js/tournament_view_js_loader.js"></script>
 </head>
 <body>
-<h1>Your Tournaments</h1>
+<h1 id="create_title">Your Tournaments</h1>
 <div id="backGPhoto">
 	<div id="team_container">
 	<!-- Tournament info appears here via database call -->
