--- a/mockup/your_tournaments.html
+++ b/mockup/your_tournaments.html
@@ -18,8 +18,7 @@
 	<!-- Tournament info appears here via database call -->
 	</div>
 	<div>
-	<a href="create_tournament.html" style="text-decoration:none"><div id="addTournamentButton">Add a tournament</div></a>
-	<a href="tournament_view.html" style="text-decoration:none"><div id="seeAllTourneysButton">See All Tournaments</div></a>
+	<a href="create_tournament.html" style="text-decoration:none"><div id="addTournamentButton">Add a tournament</div></a><a href="tournament_view.html" style="text-decoration:none"><div id="seeAllTourneysButton">See All Tournaments</div></a>
 	</div>
 </div>
 
