--- a/mockup/your_tournaments.html
+++ b/mockup/your_tournaments.html
@@ -13,6 +13,7 @@
 </head>
 <body>
 <div id="backGPhoto">
+	<div id="buttonSection">
 	<h1 id="create_title">Your Tournaments</h1>
 	<div id="team_container">
 	<!-- Tournament info appears here via database call -->
@@ -20,6 +21,7 @@
 	<div>
 	<a href="create_tournament.html" style="text-decoration:none"><div id="addTournamentButton">Add a tournament</div></a>
 	<a href="tournament_view.html" style="text-decoration:none"><div id="seeAllTourneysButton">See All Tournaments</div></a>
+	</div>
 	</div>
 </div>
 
