--- a/mockup/tourneyView.html
+++ b/mockup/tourneyView.html
@@ -95,7 +95,7 @@
 		<li class="spacer">&nbsp;</li>
 	</ul>		
 </main>
-
+<h2>Pool Matches</h2>
 <div id="pool_container"></div>
 <!-- <script>
 var service = 'wwp.cs.unc.edu/Courses/426-f16/users/tgreer/getTournament.php?id=16';
